--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 /public/build
 /public/hot
 /public/storage
-/public/*
-!/public/.htaccess
-!/public/index.php
-!/public/robots.txt
+/public
 /storage/*.key
 /vendor
 .env
